layout issue

--- a/src/main/webapp/static/css/chat.css
+++ b/src/main/webapp/static/css/chat.css
@@ -15,6 +15,7 @@ body {
     border-radius:5px; /* 圆角 */
     margin:10px 10px 0 auto;
     padding: 10px;
+    display: table;
 }
 
 .sent .arrow {
@@ -36,6 +37,7 @@ body {
     border-radius:5px; /* 圆角 */
     margin:10px auto 0 10px;
     padding: 10px;
+    display: table;
 }
 
 .received .arrow {
